# Mesa

./: .travis.yml  Android.common.mk  Android.mk  CleanSpec.mk  Makefile.am  SConstruct  TEST  appveyor.yml  configure.ac  meson.build  meson_options.txt  sym-todo
docs/: GL3.txt  llvmpipe.html  release-calendar.html  shading.html
docs/relnotes/: 10.2.html  18.2.0.html
doxygen/: glsl.doxy
include/: c99_compat.h
include/GL/internal/: dri_interface.h
include/d3dadapter/: d3dadapter9.h  present.h
scons/: custom.py  gallium.py  llvm.py
src/: Makefile.am  SConscript  meson.build
src/amd/common/: ac_gpu_info.c  ac_llvm_helper.cpp  ac_llvm_util.c  ac_llvm_util.h  ac_nir_to_llvm.c  sid_tables.py
src/amd/vulkan/: Makefile.am  radv-symbols-check  radv_descriptor_set.c  radv_device.c  radv_extensions.py  radv_pipeline.c  radv_pipeline_cache.c  vk_format_parse.py  vk_format_table.py
src/broadcom/: Android.genxml.mk  Makefile.am  Makefile.sources
src/broadcom/cle/: v3d_decoder.c
src/compiler/: Android.nir.gen.mk  Makefile.am  Makefile.glsl.am  Makefile.nir.am  Makefile.spirv.am  SConscript  SConscript.glsl  SConscript.nir  SConscript.spirv  glsl_types.cpp  nir_types.cpp  nir_types.h
src/compiler/glsl/: Android.gen.mk  Android.mk  Makefile.am  Makefile.sources  SConscript  blob.h  glsl_parser.yy  ir.cpp  ir.h  ir_expression_operation.py  ir_set_program_inouts.cpp  ir_validate.cpp  link_uniform_blocks.cpp  link_uniforms.cpp  lower_instructions.cpp  lower_subroutine.cpp  lower_variable_index_to_cond_assign.cpp  opt_constant_propagation.cpp  opt_constant_variable.cpp  opt_dead_builtin_varyings.cpp  opt_dead_code.cpp
src/compiler/nir/: Android.gen.mk  Android.mk  Makefile.am  glsl_to_nir.cpp  glsl_to_nir.h  nir.h  nir_algebraic.py  nir_builder_opcodes_h.py  nir_constant_expressions.py  nir_lower_atomics.c  nir_lower_samplers.c  nir_lower_var_copies.c  nir_opcodes.py  nir_opcodes_c.py  nir_opcodes_h.py  nir_opt_algebraic.py
src/compiler/spirv/: spirv_info_c.py
src/egl/: Makefile.am  Makefile.sources  egl-symbols-check  meson.build
src/egl/generate/: gen_egl_dispatch.py
src/egl/main/: Android.mk  SConscript  eglapi.c  egldevice.c  egldevice.h  egldisplay.c  egldisplay.h  egldriver.c  egldriver.h  eglglobals.c  egltypedefs.h
src/freedreno/: Makefile.am
src/gallium/: Android.mk  Automake.inc  Makefile.am  SConscript
src/gallium/auxiliary/: Makefile.am  meson.build
src/gallium/state_trackers/: Makefile.am
src/gallium/targets/: Makefile.am
src/gallium/tests/trivial/: Makefile.am  compute.c  quad-tex.c  tri.c
src/gallium/tools/rbug-gui/: .gitignore  Makefile.am  README
src/gbm/: Makefile.am  gbm-symbols-check  meson.build
src/glsl/: Android.gen.mk  Makefile.am  Makefile.sources  SConscript  ast.h  ast_function.cpp  ast_to_hir.cpp  ast_type.cpp  glsl_parser.yy  glsl_parser_extras.cpp  hir_field_selection.cpp  ir.cpp  ir.h  ir_clone.cpp  ir_constant_expression.cpp  ir_hierarchical_visitor.h  ir_visitor.h  link_uniform_blocks.cpp  link_uniforms.cpp  linker.cpp  lower_instructions.cpp  lower_mat_op_to_vec.cpp  opt_copy_propagation.cpp
src/glsl/nir/: glsl_types.cpp  glsl_types.h  nir.h  nir_print.c  nir_types.h
src/glx/: meson.build
src/glx/apple/: apple_xgl_api_stereo.c
src/glx/tests/: indirect_api.cpp
src/intel/: Android.blorp.mk  Android.isl.mk  Android.vulkan.mk  Makefile.am  Makefile.compiler.am  Makefile.sources  Makefile.vulkan.am
src/intel/blorp/: blorp_blit.c  blorp_genX_exec.h
src/intel/common/: gen_debug.c  gen_debug.h
src/intel/compiler/: brw_eu_compact.c  brw_eu_util.c  brw_fs.cpp  brw_fs_bank_conflicts.cpp  brw_fs_copy_propagation.cpp  brw_fs_reg_allocate.cpp  brw_nir_tcs_workarounds.c  brw_schedule_instructions.cpp  brw_vec4.cpp  test_eu_compact.cpp
src/intel/genxml/: Makefile.am
src/intel/isl/: isl.c  isl.h  isl_format.c  isl_storage_image.c
src/intel/vulkan/: .gitignore  Android.mk  Makefile.am  anv-symbols-check  (+7 more)
src/loader/: .gitignore  Makefile.am  Makefile.sources  dump-hwdb.sh  loader.c  loader_dri3_helper.c
src/mapi/: Makefile.am  mapi_abi.py  meson.build
src/mesa/: Android.gen.mk  Android.libmesa_dricore.mk  Android.libmesa_glsl_utils.mk  Android.libmesa_st_mesa.mk  Makefile.sources  SConscript
src/util/: Android.gen.mk  Android.mk  Android.xmlconfig.mk  Makefile.am  Makefile.sources  disk_cache.c  format_srgb.py  sha1.c  sha1.h  xmlconfig.c
(+384 files in other folders)
